Fixed benefit boxes. Removed portfolio-left,right spacing.  Replaced vertical row padding with bottom margins on individual boxes.

--- a/css/agency.css
+++ b/css/agency.css
@@ -515,10 +515,13 @@ section h3.section-subheading {
     color: #fff;
 }
 
+/* EP - Use margin on individual boxes for proper spacing on small 
+ * devices
 #yoga .row { 
     padding-top: 15px;
     padding-bottom: 15px;
 }
+*/
 
 #yoga .portfolio-right {
     /*right: 0;*/
@@ -535,8 +538,9 @@ section h3.section-subheading {
 
 #yoga .benefit-item {
     /*right: 0;*/
-    /*margin: 0 0 15px;*/
-    padding: 10px;
+    margin: 0 0 30px;
+    padding: 10px 30px 20px;
+	 /*padding: 10px;*/
     /*padding-top: 15px;*/
     /*padding-bottom: 15px;*/
 }
